feat(animations):add mixing to provides animations in scss

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -3,3 +3,12 @@
     align-items: center;
     flex-direction: column;
     }
+
+    @mixin animate($animation,$duration,$method,$times){
+        animation: $animation $duration $method $times;
+    }
+    @mixin keyframes($name){
+        @keyframes #{$name}{
+            @content;
+        }
+    }
