--- a/src/styles/_aula-01.scss
+++ b/src/styles/_aula-01.scss
@@ -1,24 +1,11 @@
 @import './variables';
 @import './mixins';
 /* hexagon has been added on first lesson */
-.hexagon{
+%shared-hexagon{
     width:120px;
     height:100px;
     background: $primary-color;
     position: relative;
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-    /* hexagon-light has been added on second lesson
-       NOTE: The polygon color cannot be white or black, because rotate this color using filter dont make any changes! 
-    */
-    &-light{
-        @include keyframes(light){
-            0%{
-                filter: hue-rotate(0deg);
-            }
-            100%{
-                filter:hue-rotate(360deg);
-            }
-        }
-        @include animate(light,4s,linear,infinite);
-    }
+    
 }
