--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,4 @@
 $font-body:Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 $text-default:#FFFFFFD0;
 $bg-color:#121212;
+$primary-color:#73FFF1;
