--- a/src/styles/_aula-01.scss
+++ b/src/styles/_aula-01.scss
@@ -4,8 +4,8 @@
 %shared-hexagon{
     width:100px;
     height:110px;
-    background: #111;
-    margin: 1px;
+    background: $hexagon-color;
+    margin: 2px;
     position: relative;
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
