--- a/src/styles/_aula-03.scss
+++ b/src/styles/_aula-03.scss
@@ -7,7 +7,7 @@
         margin-left: 1px;
     }
 }
-.hexagon{
+%shared-hexagon-beehive{
     @extend %shared-hexagon-lighted;
     &::before{
         content: "";
@@ -18,6 +18,7 @@
         width: 50%;
         pointer-events: none;
         background:rgba( 255,255,255, .03);
+        z-index: 500;
     }
     transition: 2s;
     &:hover{
