--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,3 +3,4 @@ $font-body:Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 $text-default:#FFFFFFD0;
 $bg-color:#000;
 $primary-color:#73FFF1;
+$hexagon-color:#111;
