refactor(hexagon):refactoring hexagon on lesson 04 to extends it on lesson 05

--- a/src/styles/_aula-04.scss
+++ b/src/styles/_aula-04.scss
@@ -1,7 +1,7 @@
 @import './aula-03';
-.hexagon{
+%shared-hexagon-stroke-beehive{
     @extend %shared-hexagon-beehive;
-    &::after{
+    &:after{
         content:'';
         position: absolute;
         top:3px;
