feat(cursorComponent):create styles for cursor component with blur and lighting effect animation and move it to behind of container

--- a/src/styles/_aula-02.scss
+++ b/src/styles/_aula-02.scss
@@ -1,6 +1,6 @@
 @import './aula-01';
 /*  hexagon-light has been added on second lesson
-    NOTE: The polygon color cannot be white or black, because rotate this color using filter dont make any changes! 
+    NOTE: The polygon color cannot be white or black, because rotate this color using filter don't make any changes! 
 */
 
 %shared-hexagon-lighted {
