--- a/src/styles/_aula-02.scss
+++ b/src/styles/_aula-02.scss
@@ -6,14 +6,13 @@
 %shared-hexagon-lighted {
     @extend %shared-hexagon;
     &-light{
-        @include keyframes(light){
-            0%{
-                filter: hue-rotate(0deg);
-            }
-            100%{
-                filter:hue-rotate(360deg);
-            }
-        }
+        @include animate(light,4s,linear,infinite);
+    }
+}
+.hexagon-02{ // O mesmo que o de cima porque esse é utilizado no componente da aula-02
+    @extend %shared-hexagon;
+    background-color: $primary-color;
+    &-light{
         @include animate(light,4s,linear,infinite);
     }
 }
