--- a/src/styles/_aula-03.scss
+++ b/src/styles/_aula-03.scss
@@ -1,8 +1,10 @@
+@use "sass:math";
+
 @import './aula-02';
 .row{
     display: inline-flex;
-    margin-top: -32px;
-    margin-left: -50px;
+    margin-top: math.div($hexagon-height,-3.4375);
+    margin-left: math.div($hexagon-width,-2);
     &:nth-child(even){
         margin-left: 1px;
     }
@@ -27,9 +29,19 @@
         background: $primary-color;
     } */
 }
+.hexagon-03{
+    @extend %shared-hexagon-beehive;
+    @include animate(light,4s,linear,infinite);
+    transition: 2s;
+    &:hover{
+        transition: 0s;
+        background: $primary-color;
+    } 
+    
+}
 .container{
     position: relative;
     overflow: hidden;
-    height: 100vh;
+    height: 100%;
     z-index: 2;
 }
