--- a/src/styles/_aula-04.scss
+++ b/src/styles/_aula-04.scss
@@ -1,7 +1,7 @@
 @import './aula-03';
 %shared-hexagon-stroke-beehive{
     @extend %shared-hexagon-beehive;
-    &:after{
+    &::after{
         content:'';
         position: absolute;
         top:3px;
@@ -12,4 +12,23 @@
         z-index: 1;
         clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
     }
+}
+.hexagon-04{
+    @extend %shared-hexagon-beehive;
+    &::after{
+        content:'';
+        position: absolute;
+        top:3px;
+        left: 3px;
+        right: 3px;
+        bottom: 3px;
+        background: $hexagon-color ;
+        z-index: 1;
+        clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    }
+    &:hover{
+        transition: 0s;
+        background: $primary-color;}
+        @include animate(light,4s,linear,infinite);
+
 }
