fix(hexagon):add !optional flag to avoid undefined style error

--- a/src/styles/_aula-05.scss
+++ b/src/styles/_aula-05.scss
@@ -16,7 +16,7 @@
         @include animate(light-blur,4s,linear,infinite);
 }
 .hexagon{
-    @extend %shared-hexagon-stroke-beehive;
+    @extend %shared-hexagon-stroke-beehive !optional;
     &::after{
         all: unset;
     }
