feat(rain-animaiton):create keyframe to animate the rain particle

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -94,3 +94,11 @@ body {
     filter:hue-rotate(360deg);
   }
 }
+@include keyframes(rain){
+  0%{
+    background-position: 0 0;
+  }
+  100%{
+    background-position: 20% 100%;
+  }
+}
