refactor(styles):using some new styles to bring the examples in cards and in a self page

--- a/src/styles/_aula-08.scss
+++ b/src/styles/_aula-08.scss
@@ -4,7 +4,7 @@
 
 .rain-container{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: relative;
     overflow: hidden;
     background: url(/resources/img/bg-rain.jpg);
