--- a/src/styles/_aula-06.scss
+++ b/src/styles/_aula-06.scss
@@ -8,18 +8,18 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: $card-height;
+    height: $card-height;
     transform-style: preserve-3d;
     transform: perspective(500px) rotateX(60deg); // Create a 3D perspective in z-index 
     & span{
         position: absolute;
         display: block;
-        border: 2px solid $primary-color;
+        border: 4px solid $primary-color;
+        outline: 4px solid #000;
         box-sizing: border-box;
         border-radius: $radius-full;
         @include wavyChildEffect(1,11);
-        @include animate(wavy,3s,ease-in-out,infinite);
-
+        @include animate(wavy,6s,ease-in-out,infinite);
     }
 }
