--- a/src/styles/_aula-07.scss
+++ b/src/styles/_aula-07.scss
@@ -6,7 +6,7 @@
     display: flex;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     &-container{
         position: relative;
