--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,3 +8,7 @@ $radius-full:99999px;
 $hexagon-width:50px;
 $hexagon-height:55px;
 $card-height:40vh;
+// Breakpoints
+$mobile: 568px;
+$tablet: 768px;
+$desktop: 1024px;
