--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -59,6 +59,12 @@
     z-index: 10;
     background-color: rgba($color: #000000, $alpha: 0.8);
   }
+  &-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 .container{
   position: relative;
