--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -72,3 +72,57 @@
       opacity: 1;
     }
   }
+  @include keyframes(shake){
+    0%{
+      transform: rotate(0deg);
+    }
+    25%{
+      transform: rotate(25deg);
+    }
+    75%{
+      transform: rotate(-25deg);
+    }
+    100%{
+      transform: rotate(0deg);
+    }
+  }
+  @include keyframes(to-bottom){
+    0%{
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    100%{
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @include keyframes(from-left){
+    0%{
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    100%{
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @include keyframes(to-left){
+    0%{
+      transform: translateX(0);
+      opacity: 1;
+    }
+    100%{
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+  }
+  @include keyframes(fade-in){
+    0%{
+      opacity: 0;
+      transform: translateY(-10%);
+    }
+    100%{
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
