styles(variables): added radius-small sass variable

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $bg-color:#000;
 $primary-color:#73FFF1;
 $hexagon-color:#111;
 $radius-full:99999px;
+$radius-small:8px;
 $hexagon-width:50px;
 $hexagon-height:55px;
 $card-height:40vh;
