--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,10 @@
   display: flex;
   flex-direction: column;
 }
-
+a,a:hover,a:visited{
+  color: unset;
+  text-decoration: none;
+}
 .app{
   padding-top: 2rem;
   display: grid;
@@ -38,7 +41,6 @@
 #main{
   width: 100%;
   min-height: 100vh;
-  margin-bottom: 2rem;
 }
 .card{
   position: relative;
