--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -8,9 +8,9 @@
     border-radius: $radius-small;
     padding: 1rem;
     align-items: center;
-    max-width: 400px;
-    width: 400px;
-    gap:3.5rem;
+    justify-content: space-between;
+    max-width: 250px;
+    width: 250px;
     aspect-ratio: 1;
     position: relative;
     overflow: hidden;
@@ -39,7 +39,7 @@
         &.node::after{
             background-color: #539E43;
         }
-        font-size: 2rem;
+        font-size: 1.75rem;
         font-style: italic;
         text-align: center;
         color: rgba($color: #1e1e1e, $alpha: 1);
@@ -51,11 +51,10 @@
         -webkit-line-clamp: 3;
         overflow: hidden;
         -webkit-box-orient: vertical;
-        max-width: 300px;
+        max-width: 200px;
     }
     & svg{
-        height: 9rem;
-        aspect-ratio: 1;
-        padding: 1rem;
+        height: 6.25rem;
+        padding: .25rem;
     }
 }
